# minaapi

./: .env-non-dev  .gitignore  Makefile  docker-compose.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/docker/: api.sh
backend/migrations/: env.py
backend/migrations/versions/: 049216f87130_update_orders_table.py  32e2074c3444_create_admins_table.py  4b9a7ac7e970_update_user_table.py  5b2571290cc4_create_referrals_table.py  7664b3f770cc_create_app_settings_table.py  963efe1c0476_create_promo_table.py  b2bb86d15c31_create_user_table.py  e002d865c112_fix_email_is_unique.py
backend/src/: config.py  main.py  schemas.py  utils.py
backend/src/admins/: dao.py  models.py  router.py  schemas.py
backend/src/app_settings/: dao.py  models.py  router.py  schemas.py
backend/src/auth/: router.py  schemas.py  utils.py
backend/src/cache/: redis.py
backend/src/db/: dao.py  models.py
backend/src/orders/: dao.py  models.py  router.py  schemas.py
backend/src/promos/: dao.py  models.py  router.py  schemas.py
backend/src/referrals/: dao.py  exceptions.py  models.py  router.py  schemas.py
backend/src/users/: dao.py  exceptions.py  models.py  router.py  schemas.py  utils.py
backend/tests/: conftest.py  promo_test.py  referral_test.py  user_test.py
