[project]
authors = [
  {name = "Aleksis", email = "lesapond2007@gmail.com"},
]
dependencies = [
  "redis (>=6.2.0,<7.0.0)",
  "fastapi (>=0.116.1,<0.117.0)",
  "alembic (>=1.16.4,<2.0.0)",
  "sqlalchemy (>=2.0.42,<3.0.0)",
  "pyjwt (>=2.10.1,<3.0.0)",
  "pytest (>=8.4.1,<9.0.0)",
  "pydantic-settings (>=2.10.1,<3.0.0)",
  "uvicorn (>=0.35.0,<0.36.0)",
  "psycopg2-binary (>=2.9.10,<3.0.0)",
  "asyncpg (>=0.30.0,<0.31.0)",
  "httpx (>=0.28.1,<0.29.0)",
  "pytest-asyncio (>=1.1.0,<2.0.0)",
]
description = ""
name = "backend"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
python_files = "*_test.py"
python_classes = "*Test"
python_functions = "*_test"
asyncio_mode = "auto"
